modified the update enpoint to let update no all fields with no modification of lacking fields on body
